# RiskPirate-C-project

./: CMakeLists.txt  README.md  exo2.cpp  iles.cpp  iles.h  partie.cpp  partie.h
